# chronoboids

./: .gitignore  .prettierignore  .prettierrc  eslint.config.ts  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts  vitest.config.ts
docs/: GGDP_CONCEPTS.md  GGDP_IMPLEMENTATION_PLAN.md
js/: boid.js  events.js  flock.js  main.js  opt.js  util.js  v2d.js
src/: main.ts
src/config/: SimulationConfig.ts  defaults.ts  index.ts  serialization.ts
src/core/: Application.ts  EventBus.test.ts  EventBus.ts  index.ts  types.ts
src/entities/: BoidEntity.ts  index.ts
src/ggdp/: GGDPManager.ts  index.ts  types.ts
src/ggdp/dimensions/: FlowDimension.test.ts  FlowDimension.ts  HierarchicalTemporalDimension.test.ts  HierarchicalTemporalDimension.ts  InfluenceDimension.test.ts  InfluenceDimension.ts  MortonDimension.test.ts  MortonDimension.ts  PerceptualDimension.test.ts  PerceptualDimension.ts  SpatialDimension.ts  TemporalDimension.test.ts  TemporalDimension.ts  VisualDimension.test.ts  VisualDimension.ts  index.ts
src/ggdp/metrics/: PerformanceMetrics.ts  index.ts
src/math/: V2D.test.ts  V2D.ts  V2DPool.test.ts  V2DPool.ts  index.ts
src/physics/: BoidPhysics.ts  index.ts
src/rendering/: BoidRenderer.ts  index.ts
src/spatial/: SpatialHash.test.ts  SpatialHash.ts  index.ts
src/systems/: FlockingSystem.ts  InputSystem.ts  RenderSystem.ts  index.ts
src/ui/: PerformanceDashboard.ts  SettingsPanel.ts  index.ts
src/utils/: color.ts  dom.ts  index.ts  random.ts
wasm-physics/: Cargo.toml
wasm-physics/src/: lib.rs
